syntax = "proto3";

package yiso;

option csharp_namespace = "Yiso.Protocol";

// 공용 타입 정의

message Vector2 {
  float x = 1;
  float y = 2;
}

enum ErrorCode {
  ERROR_CODE_NONE = 0;
  ERROR_CODE_UNKNOWN = 1;
  ERROR_CODE_INVALID_PACKET = 2;
  ERROR_CODE_AUTH_FAILED = 3;
}
